...
import androidx.compose.ui.unit.dp
import androidx.lifecycle.viewmodel.compose.viewModel

object EditActivityTestTags {
  const val INPUT_ACTIVITY_NAME = "inputActivityName"
  const val SAVE_BUTTON = "activitySave"
  const val DELETE_BUTTON = "activityDelete"
  const val PRE_DANGER_THRESHOLD_INPUT = "inputPreDangerThreshold"
  const val PRE_DANGER_TIMEOUT_INPUT = "inputPreDangerTimeout"
  const val DANGER_AVERAGE_THRESHOLD_INPUT = "inputDangerAverageThreshold"
}

/**
...
