...
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import androidx.lifecycle.viewmodel.compose.viewModel
import com.github.warnastrophy.core.domain.model.Contact

object ContactListScreenTestTags {
  const val ADD_CONTACT_BUTTON = "addButton"
  const val CONTACT_LIST = "contactList"

  fun getTestTagForContactItem(contact: Contact): String = "contactItem${contact.id}"
}

/**
...
